# SmsgMacro

./: .gitignore  AGENTS.md  Cargo.toml
.specify/memory/: constitution.md
specs/001-smsg-proc-macro/: plan.md
specs/002-smsg-package-parsing/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-smsg-package-parsing/contracts/: macro-attributes.md
specs/003-message-hash/: plan.md  tasks.md
src/: error.rs  hash.rs  ir.rs  lib.rs
src/codegen/: derive_gen.rs  mod.rs  struct_gen.rs
src/parser/: import_resolver.rs  mod.rs  package_parser.rs
tests/: integration_test.rs
tests/fixtures/: messages.smsg  messages_old.smsg
