[package]
name = "soul_msg"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
winnow = "0.7"

[dev-dependencies]
serde_json = "1.0"
