[package]
name = "smsg_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"
zenoh-ext = "1.7"
winnow = "0.7"
toml = "0.8"
blake3 = "1.5"

[dev-dependencies]
zenoh-ext = "1.7"
toml = "0.8"
tempfile = "3"
